--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-    <h1>This is my template</h1>
+    {% for n in list %}
+    <h1>This is my {{n}}</h1>
+    {% endfor %}
 </body>
 
 </html>
