Added Dynamic Templates

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,26 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{title}}</title>
-    <link rel="stylesheet" href="/static/css/index.css">
-</head>
-
-<body>
-    <h1>hey lol </h1>
-    <!-- {{clist}} -->
-    {% if title == "wow" %}
-    <div> yes working </div>
-    {% endif %}
+{% extends "base.html" %}
+{% block content %}
+<h1>hey lol </h1>
+<!-- {{clist}} -->
+{% if title == "wow" %}
+<div> yes working </div>
+{% endif %}
 
 
-    {% for n in clist %}
-    <!-- {% if n.age == 19 %} -->
-    <div>This is my {{n.age}}</div>
-    <!-- {% endif %} -->
-    {% endfor %}
-</body>
+{% for n in clist %}
+<!-- {% if n.age == 19 %} -->
+<div>This is my {{n.age}}</div>
+<!-- {% endif %} -->
+{% endfor %}
 
-</html>
+{% endblock %}
+{% extends "base.html" %}
