Added Dynamic Routing

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 <div> yes working </div>
 {% endif %}
 
-
+<a href="%{ url 'home' }%">Home</a>
 {% for n in clist %}
 <!-- {% if n.age == 19 %} -->
 <div>This is my {{n.age}}</div>
