Ui Change On Dynamic Route

--- a/templates/about.html
+++ b/templates/about.html
@@ -9,8 +9,8 @@
 
 <body>
     {{ request.path }}
-    <a href="{% url 'about' %}">About</a>
-    <div>Lol</div>
+
+    <h1>This is about page</h1>
 </body>
 
 </html>
