Added Form Data Api Calling

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,11 @@
     {{ request.path }}
     <a href="{% url 'about' %}">About</a>
     <div>Lol</div>
+    <form>
+        <input type="text" name="ipt1">
+        <input type="text" name="ipt2">
+        <button type="submit">Submit karo</button>
+    </form>
 </body>
 
 </html>
