--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
         <input type="text" name="ipt1">
         <input type="text" name="ipt2">
         <button type="submit">Submit karo</button>
+        {{output}}
     </form>
 </body>
 
