Added Dynamic Urls

--- a/templates/about.html
+++ b/templates/about.html
@@ -9,7 +9,7 @@
 
 <body>
     {{ request.path }}
-    {{output}}
+    output -> {{record.service_title}}
     <h1>This is about page</h1>
 </body>
 
