--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
         {% csrf_token %}
         {{output}}
         {% for item in output %}
-        <div>{{item.service_title | safe}}</div>
+        <a href="/item/{{item.id}}">{{item.service_title | safe}}</a>
         <div>{{item.service_title | lower}}</div>
         <div>{{item.service_title | upper}}</div>
         <div>{{item.service_title | first}}</div>
