Added Dynamic Image

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,31 +14,32 @@
     {% if error %}
     <div> error </div>
     {% endif %} -->
-    <form action="{% url 'formdata' %}">
-        {% csrf_token %}
-        <!-- {{output}} -->
-        {% for item in output %}
-        <div>
-            {{item.service_title}}
-        </div>
+    <!-- <form action="{% url 'formdata' %}"> -->
+    {% csrf_token %}
+    <!-- {{output}} -->
+    {% for item in output %}
+    <div>
+        <img src="media/{{item.icon}}" alt="">
+        {{item.service_title}}
+    </div>
 
-        <!-- <a href="/item/{{item.slug}}">{{item.service_title | safe}}</a>
+    <!-- <a href="/item/{{item.slug}}">{{item.service_title | safe}}</a>
         <div>{{item.service_title | lower}}</div>
         <div>{{item.service_title | upper}}</div>
         <div>{{item.service_title | first}}</div>
         <div>{{item.service_title | length}}</div> -->
-        {% endfor %}
-        {% if output.has_previous %}
-        <a href="/?page={{output.previous_page_number}}">Previous</a>
-        {% endif %}
-        {% for item in pages %}
-        <a href="/?page={{item}}"> {{item}} </a>
-        {% endfor %}
-        {% if output.has_next %}
-        <a href="/?page={{output.next_page_number}}">Next</a>
-        {% endif %}
-        <!-- <button type="submit">Submit karo</button> -->
-    </form>
+    {% endfor %}
+    {% if output.has_previous %}
+    <a href="/?page={{output.previous_page_number}}">Previous</a>
+    {% endif %}
+    {% for item in pages %}
+    <a href="/?page={{item}}"> {{item}} </a>
+    {% endfor %}
+    {% if output.has_next %}
+    <a href="/?page={{output.next_page_number}}">Next</a>
+    {% endif %}
+    <!-- <button type="submit">Submit karo</button> -->
+    <!-- </form> -->
 </body>
 
 </html>
